Launch jar-only companion with Minecraft Java
Took 12 minutes